# binary_serializer

./: .clang-format  CMakeLists.txt  README.md
include/binary_serializer/: binary_serializer.hpp
tests/: unit_tests.cpp
